<resources>
    <string name="app_name">IWannaFatWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="purpose_text">목적</string>
    <string name="price_text">금액</string>
    <string name="des_text">비고</string>
    <string name="tag_text">태그</string>
    <string name="date_text">날짜</string>
    <string name="input_text">수입</string>
    <string name="output_text">지출</string>
</resources>